styles.css
* {
    padding: 0;
    margin: 0;
    text-decoration: none;
    list-style: none;
    box-sizing: border-box;
    scrollbar-color: transparent transparent;
    scrollbar-width: 0px;
}
/* Nav Bar */
nav {
    background: #ab01c2;
    height: 80px;
    width: 100%;
}

body {
    font-family:  sans-serif;
    background-color: #f6f3f7fa;
    height: 100vh;
    display: grid;
    font-family: 'Poppins',sans-serif;
}
.logo {
    color: #fafafa;
    font-size: 35px;
    line-height: 80px;
    padding: 0 100px;
    font-weight: bold;
}
.cards{
    display: grid;
    grid-template-columns: repeat(auto-fit,
    minmax(400px,1fr));
    padding: 10px;
    grid: gap 100px;
}
.card{
    background-color: #1c1b29;
    border-radius: 20px;
    box-shadow: 0 0 30px rgba(0,0,0,0.18);
}
.container{
    position: relative;
    clip-path: polygon(0 0,100% 0,100%
    100%,0 100%);
}
img{
    width:100%;
    display:block;
    border-radius:20px 20px 0 0;
}
.container:after{
    content: "";
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    border-radius: 70px 100px 0 0;
    opacity: 0.7;

}
.details{
    padding: 30px 20px;
}
.details>h3{
    color: #fafafa;
    font-weight: 400;
    font-size: 18px;
    margin: 5px 0 5px 0;
}
.details>p{
    color:#a0a0a0;
    font-size: 15px;
    line-height: 10px;
    font-weight: 200;
}

